<resources>
    <string name="app_name">Lokasi Tempat Sampah</string>
    <string name="dinas">DINAS LINGKUNGAN HIDUP DAN KEBERSIHAN</string>
    <string name="kabkot">KOTA PALEMBANG</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_home">Home</string>
    <string name="title_kontak">Kontak</string>
    <string name="title_event">Event</string>
    <string name="title_laporan">Laporan</string>
    <string name="title_profil">Profil</string>


    <string name="about">Lokasi Tempat Sampah - Kota Palembang merupakan program tugas akhir S1 Sistem Informasi Universitas Bina Darma yang dibuat oleh Doni pada 2018.
						\n\email : doniapriansyah@yahoo.co.id

						\n\nDinas Lingkungan Hidup dan Kebersihan Kota Palembang
                        \n\Jl. Sukarela No.129 A, Sukarami, Kota Palembang, Sumatera Selatan 30153</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="data_akun">Data Akun</string>
    <string name="nama">Nama</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="alamat_email">Alamat email</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="alamat">Alamat</string>
    <string name="profil_kabupaten">Profil Muara Enim</string>

    <string name="facebook_app_id">956674304531896</string>
    <string name="facebook_account_kit_client_token">8485698abacd6c7c5e3286a91b9f6205</string>
    <string name="fb_login_protocol_scheme">fb956674304531896</string>
    <string name="ak_login_protocol_scheme">ak956674304531896</string>
    <string name="lokasi">lokasi</string>
    <string name="kirim_laporan">Kirim Laporan</string>

    <string name="tidak_terhubung_ke_server">Gagal terhubung ke server</string>
    <string name="coba_lagi">Coba lagi</string>
</resources>
