<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_laporan"
        android:icon="@drawable/icon_laporan"
        android:title="@string/title_laporan" />

    <item
        android:id="@+id/navigation_kirimlaporan"
        android:icon="@drawable/icon_report"
        android:title="@string/kirim_laporan" />

    <item
        android:id="@+id/navigation_lokasi"
        android:icon="@drawable/icon_location"
        android:title="@string/lokasi" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/icon_profil"
        android:title="@string/title_profil" />

</menu>
