<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/ll"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:background="@drawable/bacground"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/ll"
                android:layout_alignParentTop="true"
                android:alpha="0.3"
                android:background="@android:color/black"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingTop="50dp"
                android:paddingRight="@dimen/activity_margin"
                android:paddingBottom="50dp">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:id="@+id/imgProfil"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="4dp"
                        android:src="@drawable/baseline_photo_camera_24"
                        android:tint="@android:color/white"
                        tools:ignore="ContentDescription,UnusedAttribute" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/imgEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="RelativeOverlap,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/edit_profil"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_edit_24"
                    android:tint="@android:color/white"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profilmuaraenim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:background="@drawable/custom_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/profil_kabupaten"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/data_akun"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="13dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_person_24"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp"
                                android:src="@drawable/baseline_credit_card_24"
                                android:tint="#757575"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp"
                                android:src="@drawable/baseline_email_24"
                                android:tint="#757575"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="20dp"
                                android:src="@drawable/baseline_lock_24"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp"
                                android:src="@drawable/baseline_call_24"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp"
                                android:src="@drawable/baseline_location_on_24"
                                tools:ignore="ContentDescription" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/etNama"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nama"
                                android:textSize="14sp"
                                tools:ignore="Autofill,TextFields" />

                            <EditText
                                android:id="@+id/etNoKtp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nomor_ktp"
                                android:textSize="14sp"
                                tools:ignore="Autofill,TextFields" />

                            <EditText
                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/alamat_email"
                                android:textSize="14sp"
                                tools:ignore="Autofill,TextFields" />

                            <EditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/baseline_edit_24"
                                android:drawableRight="@drawable/baseline_edit_24"
                                android:hint="* * * * *"
                                android:textSize="14sp"
                                tools:ignore="Autofill,HardcodedText,TextFields" />

                            <EditText
                                android:id="@+id/etNoHp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nomor_hp"
                                android:textSize="14sp"
                                tools:ignore="Autofill,TextFields" />

                            <EditText
                                android:id="@+id/etAlamat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/alamat"
                                android:textSize="14sp"
                                tools:ignore="Autofill,TextFields" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>